--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,12 +11,12 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Set up JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-          server-id: github # value of repository/id field of the pom.xml
-          server-username: GITHUB_USER_REF  # env variable name for username
-          server-password: GITHUB_TOKEN_REF # env variable name for GitHub Personal Access Token
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+        server-id: github
+        server-username: GITHUB_USER_REF
+        server-password: GITHUB_TOKEN_REF
  
     - name: BuildTools cache
       uses: actions/cache@v2
