--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
  
     - name: Build
       run: |
-        mvn clean -B --also-make "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)"
+        mvn clean package "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)"
         mkdir dist
         mv target/npcsystem-*.jar ./dist
       env:
