--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,6 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
     - name: Publish to GitHub Packages
-      run: mvn --batch-mode deploy
+      run: mvn --batch-mode deploy "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)"
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PACKAGE_REPO_PASSWORD }}
