--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,10 +15,8 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-        server-id: github
-        server-username: GITHUB_USER_REF
-        server-password: GITHUB_TOKEN_REF
+        java-version: 16
+        distribution: 'adopt'
  
     - name: BuildTools cache
       uses: actions/cache@v2
