--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,15 @@
 	<properties>
 		<revision>0.0.0</revision>
 
-		<dependency.bukkit.version>1.16.5-R0.1-SNAPSHOT</dependency.bukkit.version>
+		<dependency.bukkit.version>1.17-R0.1-SNAPSHOT</dependency.bukkit.version>
 		<dependency.protocollib.version>4.5.1</dependency.protocollib.version>
-		<dependency.bstats.version>1.7</dependency.bstats.version>
+		<dependency.bstats.version>2.2.1</dependency.bstats.version>
 
-		<plugin.shade.version>3.2.1</plugin.shade.version>
+		<plugin.shade.version>3.2.4</plugin.shade.version>
 
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>16</maven.compiler.source>
+		<maven.compiler.target>16</maven.compiler.target>
+		<java.version>16</java.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -48,8 +49,9 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
-			<artifactId>spigot-api</artifactId>
+			<artifactId>spigot</artifactId>
 			<version>${dependency.bukkit.version}</version>
+			<classifier>remapped-mojang</classifier>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -78,23 +80,35 @@
 		</resources>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>${plugin.shade.version}</version>
-				<configuration>
-					<relocations>
-						<relocation>
-							<pattern>org.bstats</pattern>
-							<shadedPattern>de.ngloader.npcsystem</shadedPattern>
-						</relocation>
-					</relocations>
-				</configuration>
+				<groupId>net.md-5</groupId>
+				<artifactId>specialsource-maven-plugin</artifactId>
+				<version>1.2.2</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
 						<goals>
-							<goal>shade</goal>
+							<goal>remap</goal>
 						</goals>
+						<id>remap-obf</id>
+						<configuration>
+							<srgIn>org.spigotmc:minecraft-server:${dependency.bukkit.version}:txt:maps-mojang</srgIn>
+							<reverse>true</reverse>
+							<remappedDependencies>org.spigotmc:spigot:${dependency.bukkit.version}:jar:remapped-mojang</remappedDependencies>
+							<remappedArtifactAttached>true</remappedArtifactAttached>
+							<remappedClassifierName>remapped-obf</remappedClassifierName>
+						</configuration>
+					</execution>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>remap</goal>
+						</goals>
+						<id>remap-spigot</id>
+						<configuration>
+							<inputFile>${project.build.directory}/${project.artifactId}-${project.version}-remapped-obf.jar</inputFile>
+							<srgIn>org.spigotmc:minecraft-server:${dependency.bukkit.version}:csrg:maps-spigot</srgIn>
+							<remappedDependencies>org.spigotmc:spigot:${dependency.bukkit.version}:jar:remapped-obf</remappedDependencies>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
