--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 		</repository>
 		<repository>
 			<id>dmulloy2-repo</id>
-			<url>http://repo.dmulloy2.net/content/groups/public/</url>
+			<url>https://repo.dmulloy2.net/content/groups/public/</url>
 		</repository>
 		<repository>
 			<id>CodeMC</id>
