--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/.m2/repository/org/spigotmc/spigot
-        key: ${{ runner.os }}-maven-${{ hashFiles('./.github/workflows/buildtools.sh') }}
+        key: ${{ runner.os }}-maven2-${{ hashFiles('./.github/workflows/buildtools.sh') }}
         restore-keys: |
           ${{ runner.os }}-maven-
 
