fix: fixed build release

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
         path: ~/.m2/repository/org/spigotmc/spigot
         key: ${{ runner.os }}-maven2-${{ hashFiles('./.github/workflows/buildtools.sh') }}
         restore-keys: |
-          ${{ runner.os }}-maven-
+          ${{ runner.os }}-maven2-
 
     - name: BuildTools
       run: |
