--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         path: ~/.m2/repository/org/spigotmc/spigot
         key: ${{ runner.os }}-maven2-${{ hashFiles('./.github/workflows/buildtools.sh') }}
         restore-keys: |
-          ${{ runner.os }}-maven-
+          ${{ runner.os }}-maven2-
     - name: BuildTools
       run: |
         sh ./.github/workflows/buildtools.sh
