fix: fixed itpack build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,10 +22,10 @@ jobs:
     - name: BuildTools cache
       uses: actions/cache@v2
       with:
-        path: ~/.m2/repository/org/spigotmc/spigot
-        key: ${{ runner.os }}-maven2-${{ hashFiles('./.github/workflows/buildtools.sh') }}
+        path: ~/.m2/repository/org/spigotmc
+        key: ${{ runner.os }}-maven-${{ secrets.CACHE_VERSION }}-${{ hashFiles('./.github/workflows/buildtools.sh') }}
         restore-keys: |
-          ${{ runner.os }}-maven2-
+          ${{ runner.os }}-maven-${{ secrets.CACHE_VERSION }}-
     - name: BuildTools
       run: |
         sh ./.github/workflows/buildtools.sh
