--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<dependency.protocollib.version>4.5.1</dependency.protocollib.version>
 		<dependency.bstats.version>2.2.1</dependency.bstats.version>
 
-		<plugin.shade.version>3.2.4</plugin.shade.version>
+		<plugin.specialsource.version>1.2.2</plugin.specialsource.version>
 
 		<maven.compiler.source>16</maven.compiler.source>
 		<maven.compiler.target>16</maven.compiler.target>
@@ -82,7 +82,7 @@
 			<plugin>
 				<groupId>net.md-5</groupId>
 				<artifactId>specialsource-maven-plugin</artifactId>
-				<version>1.2.2</version>
+				<version>${plugin.specialsource.version}</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
