--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 		<dependency.bstats.version>2.2.1</dependency.bstats.version>
 
 		<plugin.specialsource.version>1.2.2</plugin.specialsource.version>
+		<plugin.nexus-staging.version>1.5.1</plugin.nexus-staging.version>
+		<plugin.deploy.version>2.8.1</plugin.deploy.version>
 
 		<maven.compiler.source>16</maven.compiler.source>
 		<maven.compiler.target>16</maven.compiler.target>
@@ -25,11 +27,17 @@
 
 	<distributionManagement>
 		<repository>
-			<id>github</id>
-			<name>GitHub Packages</name>
-			<url>https://maven.pkg.github.com/NgLoader/NPCSystem</url>
+			<id>nexus-releases</id>
+			<name>Nexus</name>
+			<url>https://nexus.wuffy.eu/repository/maven-releases</url>
 		</repository>
 	</distributionManagement>
+
+	<scm>
+		<connection>scm:git:https://github.com/NgLoader/NPCSystem.git</connection>
+		<url>http://github.com/NgLoader/NPCSystem</url>
+		<developerConnection>scm:git:https://github.com/NgLoader/NPCSystem.git</developerConnection>
+	</scm>
 
 	<repositories>
 		<repository>
@@ -111,6 +119,38 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>${plugin.deploy.version}</version>
+				<executions>
+					<execution>
+						<id>default-deploy</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>deploy</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>${plugin.nexus-staging.version}</version>
+				<executions>
+					<execution>
+						<id>default-deploy</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>deploy</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<serverId>nexus</serverId>
+					<nexusUrl>https://nexus.wuffy.eu/repository/maven-releases/</nexusUrl>
+					<skipStaging>true</skipStaging>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
