--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,9 +6,16 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    steps:
+    steps: 
     - name: Checkout
       uses: actions/checkout@v1
+
+    - name: BuildTools cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository/org/spigotmc
+        key: ${{ runner.os }}-maven-${{ secrets.CACHE_VERSION }}-${{ hashFiles('./.github/workflows/buildtools.sh') }}
+
     - name: Set up JDK 16
       uses: actions/setup-java@v2
       with:
