--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,12 +16,17 @@ jobs:
         path: ~/.m2/repository/org/spigotmc
         key: ${{ runner.os }}-maven-${{ secrets.CACHE_VERSION }}-${{ hashFiles('./.github/workflows/buildtools.sh') }}
 
+    - name: maven-settings-xml-action
+      uses: whelk-io/maven-settings-xml-action@v18
+      with:
+        servers: '[{ "id": "nexus-releases", "username": "deployment", "password": "${{ secrets.NEXUS_DEPLOYMENT }}" }]'
+
     - name: Set up JDK 16
       uses: actions/setup-java@v2
       with:
         java-version: '16'
         distribution: 'adopt'
     - name: Publish to GitHub Packages
-      run: mvn -s settings.xml --batch-mode deploy "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)"
+      run: mvn --batch-mode deploy "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)"
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PACKAGE_REPO_PASSWORD }}
