--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,11 @@ jobs:
         GITHUB_USER_REF: ${{ secrets.GH_PACKAGE_REPO_USERNAME }}
         GITHUB_TOKEN_REF: ${{ secrets.GH_PACKAGE_REPO_PASSWORD  }}
 
+    - name: maven-settings-xml-action
+      uses: whelk-io/maven-settings-xml-action@v18
+      with:
+        servers: '[{ "id": "nexus-releases", "username": "deployment", "password": "${{ secrets.NEXUS_DEPLOYMENT }}" }]'
+ 
     - uses: ncipollo/release-action@v1
       with:
         artifacts: "dist/*"
@@ -45,6 +50,6 @@ jobs:
         token: ${{ secrets.GH_PACKAGE_REPO_PASSWORD  }}
 
     - name: Publish to GitHub Packages
-      run: mvn -s settings.xml --batch-mode deploy "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)"
+      run: mvn --batch-mode deploy "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)"
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PACKAGE_REPO_PASSWORD }}
