--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
     - name: maven-settings-xml-action
       uses: whelk-io/maven-settings-xml-action@v18
       with:
-        servers: '[{ "id": "nexus-releases", "username": "deployment", "password": "${{ secrets.NEXUS_DEPLOYMENT }}" }]'
+        servers: '[{ "id": "nexus-releases", "username": "deployment", "password": ${{ secrets.NEXUS_DEPLOYMENT }} }]'
 
     - name: Set up JDK 16
       uses: actions/setup-java@v2
@@ -27,6 +27,6 @@ jobs:
         java-version: '16'
         distribution: 'adopt'
     - name: Publish to GitHub Packages
-      run: mvn --batch-mode deploy "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)"
+      run: mvn -s ~/.m2/settings.xml --batch-mode deploy "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)"
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PACKAGE_REPO_PASSWORD }}
