--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
     - name: maven-settings-xml-action
       uses: whelk-io/maven-settings-xml-action@v18
       with:
-        servers: '[{ "id": "nexus-releases", "username": "deployment", "password": ${{ secrets.NEXUS_DEPLOYMENT }} }]'
+        servers: '[{ "id": "nexus-releases", "username": "deployment", "password": "${{ secrets.NEXUS_DEPLOYMENT }}" }]'
 
     - name: Set up JDK 16
       uses: actions/setup-java@v2
