--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
     - name: maven-settings-xml-action
       uses: whelk-io/maven-settings-xml-action@v18
       with:
-        servers: '[{ "id": "nexus-releases", "username": "deployment", "password": "${{ secrets.NEXUS_DEPLOYMENT }}" }]'
+        servers: '[{ "id": "nexus", "username": "deployment", "password": "${{ secrets.NEXUS_DEPLOYMENT }}" }]'
  
     - uses: ncipollo/release-action@v1
       with:
@@ -50,6 +50,6 @@ jobs:
         token: ${{ secrets.GH_PACKAGE_REPO_PASSWORD  }}
 
     - name: Publish to GitHub Packages
-      run: mvn --batch-mode deploy "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)"
+      run: mvn -Daether.connector.basic.threads=1 -s ~/.m2/settings.xml --batch-mode deploy "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)"
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PACKAGE_REPO_PASSWORD }}
