--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,15 @@
 	<version>${revision}</version>
 
 	<properties>
-		<revision>0.0.0</revision>
+		<revision>1.0.6</revision>
 
 		<dependency.bukkit.version>1.17-R0.1-SNAPSHOT</dependency.bukkit.version>
 		<dependency.protocollib.version>4.5.1</dependency.protocollib.version>
 		<dependency.bstats.version>2.2.1</dependency.bstats.version>
 
 		<plugin.specialsource.version>1.2.2</plugin.specialsource.version>
-		<plugin.nexus-staging.version>1.5.1</plugin.nexus-staging.version>
-		<plugin.deploy.version>2.8.1</plugin.deploy.version>
+		<plugin.nexus-staging.version>1.6.7</plugin.nexus-staging.version>
+		<plugin.deploy.version>2.8.2</plugin.deploy.version>
 
 		<maven.compiler.source>16</maven.compiler.source>
 		<maven.compiler.target>16</maven.compiler.target>
@@ -27,19 +27,20 @@
 
 	<distributionManagement>
 		<repository>
-			<id>nexus-releases</id>
+			<id>nexus</id>
 			<name>Nexus</name>
 			<url>https://nexus.wuffy.eu/repository/maven-releases</url>
 		</repository>
 	</distributionManagement>
 
-	<scm>
-		<connection>scm:git:https://github.com/NgLoader/NPCSystem.git</connection>
-		<url>http://github.com/NgLoader/NPCSystem</url>
-		<developerConnection>scm:git:https://github.com/NgLoader/NPCSystem.git</developerConnection>
-	</scm>
-
 	<repositories>
+		<repository>
+			<id>nexus</id>
+			<url>https://nexus.wuffy.eu/repository/maven-releases</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
 		<repository>
 			<id>spigot-repo</id>
 			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
@@ -86,6 +87,7 @@
 				</includes>
 			</resource>
 		</resources>
+
 		<plugins>
 			<plugin>
 				<groupId>net.md-5</groupId>
@@ -119,38 +121,6 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>${plugin.deploy.version}</version>
-				<executions>
-					<execution>
-						<id>default-deploy</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>deploy</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>${plugin.nexus-staging.version}</version>
-				<executions>
-					<execution>
-						<id>default-deploy</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>deploy</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<serverId>nexus</serverId>
-					<nexusUrl>https://nexus.wuffy.eu/repository/maven-releases/</nexusUrl>
-					<skipStaging>true</skipStaging>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
