fix: fixed github actions deploy

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v1
+    - uses: benjlevesque/short-sha@v1.2
+      id: short-sha
+      with:
+        length: 6
 
     - name: Set up JDK
       uses: actions/setup-java@v1
@@ -30,12 +34,21 @@ jobs:
  
     - name: Build
       run: |
-        mvn clean package "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)"
+        mvn clean package "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)--SNAPSHOT"
         mkdir dist
         mv target/npcsystem-*.jar ./dist
       env:
         GITHUB_USER_REF: ${{ secrets.GH_PACKAGE_REPO_USERNAME }}
         GITHUB_TOKEN_REF: ${{ secrets.GH_PACKAGE_REPO_PASSWORD }}
+
+    - name: Create maven settings
+      uses: s4u/maven-settings-action@v2.4.0
+      with:
+        servers: '[{ "id": "nexus", "username": "deployment", "password": "${{ secrets.NEXUS_DEPLOYMENT }}" }]'
+    - name: Publish to Nexus snapshots
+      run: mvn -Daether.connector.basic.threads=1 -s ~/.m2/settings.xml deploy "-Drevision=${{ steps.short-sha.outputs.sha }}-SNAPSHOT"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_PACKAGE_REPO_PASSWORD }}
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
