--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       uses: s4u/maven-settings-action@v2.4.0
       with:
         servers: '[{ "id": "nexus", "username": "deployment", "password": "${{ secrets.NEXUS_DEPLOYMENT }}" }]'
-    - name: Publish to GitHub Packages
-      run: mvn -Daether.connector.basic.threads=1 -s ~/.m2/settings.xml deploy "-Drevision=$(git describe --tags `git rev-list --tags --max-count=1`)"
+    - name: Publish to Nexus snapshots
+      run: mvn -Daether.connector.basic.threads=1 -s ~/.m2/settings.xml deploy "-Drevision=${{ steps.short-sha.outputs.sha }}-SNAPSHOT"
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PACKAGE_REPO_PASSWORD }}
