--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,10 +22,10 @@ jobs:
         java-version: '16'
         distribution: 'adopt'
   
-    - name: maven-settings-xml-action
+    - name: Create maven settings
       uses: s4u/maven-settings-action@v2.4.0
       with:
-        servers: '[{ "id": "nexus", "username": "deployment", "password": "${{ secrets.NEXUS_DEPLOYMENT }}" }]'
+        servers: '[{ "id": "nexus", "username": "${{ secrets.NEXUS_DEPLOYMENT_NAME }}", "password": "${{ secrets.NEXUS_DEPLOYMENT }}" }]'
     - name: Publish to Nexus snapshots
       run: mvn -Daether.connector.basic.threads=1 -s ~/.m2/settings.xml deploy "-Drevision=${{ steps.short-sha.outputs.sha }}-SNAPSHOT"
       env:
