--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<revision>1.0.6</revision>
 
 		<dependency.bukkit.version>1.17-R0.1-SNAPSHOT</dependency.bukkit.version>
-		<dependency.protocollib.version>4.5.1</dependency.protocollib.version>
+		<dependency.protocollib.version>4.7.0-SNAPSHOT</dependency.protocollib.version>
 		<dependency.bstats.version>2.2.1</dependency.bstats.version>
 
 		<plugin.specialsource.version>1.2.2</plugin.specialsource.version>
@@ -53,6 +53,13 @@
 		</repository>
 	</repositories>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>apache.snapshots</id>
+			<url>https://repository.apache.org/snapshots/</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
@@ -87,6 +94,27 @@
 		</resources>
 
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.3.0-SNAPSHOT</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<relocations>
+						<relocation>
+							<pattern>org.bstats</pattern>
+							<shadedPattern>de.ngloader.npcsystem</shadedPattern>
+						</relocation>
+					</relocations>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>net.md-5</groupId>
 				<artifactId>specialsource-maven-plugin</artifactId>
