--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,16 @@
 	<version>${revision}</version>
 
 	<properties>
-		<revision>1.6.8</revision>
+		<revision>2.0.0</revision>
 
 		<dependency.bukkit.version>1.19-R0.1-SNAPSHOT</dependency.bukkit.version>
-		<dependency.protocollib.version>4.8.0-SNAPSHOT</dependency.protocollib.version>
+		<dependency.protocollib.version>5.0.0-SNAPSHOT</dependency.protocollib.version>
 		<dependency.bstats.version>2.2.1</dependency.bstats.version>
 
 		<plugin.specialsource.version>1.2.4</plugin.specialsource.version>
 		<plugin.nexus-staging.version>1.6.7</plugin.nexus-staging.version>
 		<plugin.deploy.version>2.8.2</plugin.deploy.version>
+		<plugin.shade.version>3.3.0</plugin.shade.version>
 
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
@@ -136,7 +137,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.3.0</version>
+				<version>${plugin.shade.version}</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
